Fixed corners on firefox (part 2)

--- a/docs/customhud/style.css
+++ b/docs/customhud/style.css
@@ -67,7 +67,7 @@ table {
     border: solid 2px black;
     border-spacing: 0;
     border-radius: 12px;
-    background-color: black;
+    background-color: #f4f5f7;
     overflow: scroll;
     box-shadow: #444 4px 4px 2px;
 }
@@ -95,7 +95,6 @@ td {
 }
 
 tr:nth-child(even) td{ background-color: #e0e0e0; }
-tr:nth-child(odd) td{ background-color: #f4f5f7; }
 th:last-child, td:last-child { border-right: none; }
 .rowspan_fix_right { border-right: 2px solid !important; }
 tr:last-child td, .rowspan { border-bottom: none; }
